--- a/index.html
+++ b/index.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Block A - Clients</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Global InfoCity Park Chennai - Block A</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: black;
+      color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+    }
+    .container { width: 100%; max-width: 480px; }
+    .logo img { width: 100%; height: auto; }
+    .title {
+      display: flex; justify-content: space-between;
+      padding: 10px 14px;
+      border-top: 2px solid white;
+      border-bottom: 2px solid white;
+      font-weight: bold; font-style: italic; font-size: 20px;
+    }
+    .title span { text-decoration: underline; }
+    table { width: 100%; border-collapse: collapse; }
+    tr { border-top: 1px solid rgba(255,255,255,0.4); }
+    td { padding: 12px; text-align: center; }
+    td.floor { font-weight: bold; font-size: 18px; width: 60px; color: #ddd; }
+    td.company { display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; }
+    .company-item { display: flex; flex-direction: column; align-items: center; font-size: 14px; margin: 4px 10px; }
+    .company-item img { max-height: 40px; max-width: 120px; margin-bottom: 6px; filter: brightness(120%); }
+    .company-item span { font-size: 12px; color: #ccc; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- Top Logo -->
+    <div class="logo">
+      <img src="https://i.ibb.co/6vFQq3f/globalinfocity-logo.png" alt="Global InfoCity Park Chennai Logo" />
+    </div>
+
+    <!-- Header -->
+    <div class="title">
+      <span>FLOOR</span>
+      <span>BLOCK-A</span>
+    </div>
+
+    <!-- Directory Table -->
+    <table id="directory">
+      <tbody id="floors"></tbody>
+    </table>
+  </div>
+
+  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
+    // Your Firebase Config (Block A)
     const firebaseConfig = {
       apiKey: "AIzaSyCrGIB_YK33p_2EPTpU-klZ_3xQ5TOPm4c",
       authDomain: "adora-ad.firebaseapp.com",
@@ -20,70 +69,40 @@
       measurementId: "G-QW5Y41EKLR"
     };
 
+    // Init Firebase
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // Force Block A
-    const block = "A";
-    const floorsRef = ref(db, `blocks/${block}/floors`);
+    // Reference Block A floors
+    const floorsRef = ref(db, "blocks/A/floors");
 
+    const floorsContainer = document.getElementById("floors");
+
+    // Listen for changes
     onValue(floorsRef, (snapshot) => {
       const data = snapshot.val();
-      const container = document.getElementById("clients");
-      container.innerHTML = "";
+      floorsContainer.innerHTML = ""; // clear
 
-      if (data) {
-        // Sort floors numerically/alphabetically
-        Object.keys(data).sort((a,b)=>a.localeCompare(b, undefined, {numeric:true})).forEach(floor => {
-          const row = document.createElement("div");
-          row.className = "flex items-center border-t border-gray-400 py-3";
+      for (const floor in data) {
+        const tenants = data[floor];
 
-          // Floor label
-          const floorBox = document.createElement("div");
-          floorBox.className = "w-24 text-center font-bold text-xl text-white";
-          floorBox.textContent = floor;
-          row.appendChild(floorBox);
+        let row = `<tr>
+          <td class="floor">${floor}</td>
+          <td class="company">`;
 
-          // Tenants (logos + names in straight line)
-          const tenants = data[floor].tenants || {};
-          const tenantsBox = document.createElement("div");
-          tenantsBox.className = "flex flex-wrap gap-8 ml-6";
-
-          Object.keys(tenants).forEach(tid => {
-            const t = tenants[tid];
-            const item = document.createElement("div");
-            item.className = "flex items-center gap-2";
-
-            if (t.logoUrl) {
-              const logo = document.createElement("img");
-              logo.src = t.logoUrl;
-              logo.className = "h-8 w-auto";
-              item.appendChild(logo);
-            }
-
-            const name = document.createElement("span");
-            name.className = "text-lg text-white";
-            name.textContent = t.name;
-            item.appendChild(name);
-
-            tenantsBox.appendChild(item);
-          });
-
-          row.appendChild(tenantsBox);
-          container.appendChild(row);
+        tenants.forEach(tenant => {
+          row += `
+            <div class="company-item">
+              <img src="${tenant.logo}" alt="${tenant.name}"/>
+              <span>${tenant.name}</span>
+            </div>
+          `;
         });
+
+        row += `</td></tr>`;
+        floorsContainer.innerHTML += row;
       }
     });
   </script>
-</head>
-<body class="bg-black min-h-screen text-white p-6">
-  <!-- Header like in the image -->
-  <div class="text-center mb-8">
-    <h1 class="text-5xl font-extrabold tracking-wider">GLOBAL</h1>
-    <h2 class="text-3xl">INFOSITY PARK CHENNAI</h2>
-    <h3 class="text-2xl mt-3">BLOCK - A</h3>
-  </div>
-
-  <div id="clients" class="w-full border-b border-gray-400"></div>
 </body>
 </html>
