--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="container">
     <!-- Top Logo -->
     <div class="logo">
-      <img src="https://ibb.co/Txmcb9fV" alt="Global InfoCity Park Chennai Logo" />
+      <img src="https://i.ibb.co/MxMnGFvY/20250911-222515.jpg" alt="Global InfoCity Park Chennai Logo" />
     </div>
 
     <!-- Header -->
